@@ -1,9 +1,10 @@
 package org.openl.rules.convertor;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 public class String2CharConvertorTest {
 
@@ -11,19 +12,23 @@ public class String2CharConvertorTest {
     public void testParse() {
         String2CharConvertor converter = new String2CharConvertor();
         Character result = converter.parse("X", null);
-        assertEquals(new Character('X'), result);
+        assertEquals(Character.valueOf('X'), result);
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void testParseEmpty() {
-        String2BooleanConvertor converter = new String2BooleanConvertor();
-        converter.parse("", null);
+        assertThrows(IllegalArgumentException.class, () -> {
+            String2BooleanConvertor converter = new String2BooleanConvertor();
+            converter.parse("", null);
+        });
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void testParseWrongValue() {
-        String2BooleanConvertor converter = new String2BooleanConvertor();
-        converter.parse("12", null);
+        assertThrows(IllegalArgumentException.class, () -> {
+            String2BooleanConvertor converter = new String2BooleanConvertor();
+            converter.parse("12", null);
+        });
     }
 
     @Test
