@@ -1,27 +1,28 @@
 package org.openl.rules.indexer;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+
 import org.openl.rules.TestUtils;
 
 public class ArrayIndexTest {
     private static Object instance;
 
-    @BeforeClass
+    @BeforeAll
     public static void init() {
         instance = TestUtils.create("./test/rules/ArrayIndexTest.xlsx");
     }
 
     @Test
     public void testArray1() {// ShortValue
-        assertEquals(new Short((short) -10), TestUtils.invoke(instance, "isWork1"));
+        assertEquals(Short.valueOf((short) -10), TestUtils.invoke(instance, "isWork1"));
     }
 
     @Test
     public void testArray2() {// IntValue
-        assertEquals(new Integer(-10), TestUtils.invoke(instance, "isWork2"));
+        assertEquals(Integer.valueOf(-10), TestUtils.invoke(instance, "isWork2"));
     }
 
     @Test
