@@ -1,8 +1,9 @@
 package org.openl.rules.ruleservice.core.interceptors;
 
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
@@ -14,19 +15,15 @@ import java.util.Calendar;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-
 import javax.annotation.PostConstruct;
 import javax.annotation.Resource;
 
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
+import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 
 import org.openl.rules.common.CommonVersion;
 import org.openl.rules.common.impl.CommonVersionImpl;
@@ -53,9 +50,8 @@ import org.openl.rules.ruleservice.loader.RuleServiceLoader;
 import org.openl.types.IOpenClass;
 import org.openl.types.IOpenMember;
 
-@RunWith(SpringJUnit4ClassRunner.class)
 @TestPropertySource(properties = {"some.prop = @Value"})
-@ContextConfiguration({ "classpath:openl-ruleservice-beans.xml" })
+@SpringJUnitConfig(locations = {"classpath:openl-ruleservice-beans.xml"})
 public class ServiceInterfaceMethodInterceptingTest {
 
     private static final String ELUSIVE_CLASS_NAME = "org.openl.test.MustNotBeFoundInClassloader";
@@ -77,7 +73,7 @@ public class ServiceInterfaceMethodInterceptingTest {
     public static class AroundInterceptor implements ServiceMethodAroundAdvice<Integer> {
         @Override
         public Integer around(Method interfaceMethod, Method beanMethod, Object proxy, Object... args) {
-            return new Integer(-1);
+            return Integer.valueOf(-1);
         }
 
     }
@@ -174,6 +170,7 @@ public class ServiceInterfaceMethodInterceptingTest {
     public static class AfterConverter5 extends AbstractServiceMethodAfterReturningAdvice<String> {
 
         String methodName;
+
         @InjectOpenMember
         public void setIOpenMember(IOpenMember openMember) {
             this.methodName = openMember.getName().toUpperCase();
@@ -266,9 +263,9 @@ public class ServiceInterfaceMethodInterceptingTest {
         @Override
         public Object invoke(Method interfaceMethod, Object serviceBean, Object... args) throws Exception {
             Class<?> myBeanClass = Thread.currentThread()
-                .getContextClassLoader()
-                .loadClass("org.openl.generated.beans.MyBean");
-            return myBeanClass.newInstance();
+                    .getContextClassLoader()
+                    .loadClass("org.openl.generated.beans.MyBean");
+            return myBeanClass.getDeclaredConstructor().newInstance();
         }
     }
 
@@ -289,6 +286,7 @@ public class ServiceInterfaceMethodInterceptingTest {
             this.openClass = openClass;
 
         }
+
         @Override
         public String invoke(Method interfaceMethod, Object serviceBean, Object... args) throws Exception {
             var myBeanClass = classLoader.loadClass("org.openl.generated.beans.MyBean").getSimpleName();
@@ -304,18 +302,18 @@ public class ServiceInterfaceMethodInterceptingTest {
 
     private ServiceDescription.ServiceDescriptionBuilder serviceDescriptionBuilder() {
         return new ServiceDescription.ServiceDescriptionBuilder().setServiceClassName(OverloadInterface.class.getName())
-            .setName("service")
-            .setUrl("/")
-            .setProvideRuntimeContext(true)
-            .setProvideVariations(false)
-            .setDeployment(deploymentDescription)
-            .setModules(modules)
-            .setServicePath("service")
-            .setResourceLoader(location -> null);
+                .setName("service")
+                .setUrl("/")
+                .setProvideRuntimeContext(true)
+                .setProvideVariations(false)
+                .setDeployment(deploymentDescription)
+                .setModules(modules)
+                .setServicePath("service")
+                .setResourceLoader(location -> null);
     }
 
-    @Before
-    public void before() {
+    @BeforeEach
+    public void before() throws Exception {
         CommonVersion version = new CommonVersionImpl(0, 0, 1);
         deploymentDescription = new DeploymentDescription("someDeploymentName", version);
 
@@ -327,7 +325,7 @@ public class ServiceInterfaceMethodInterceptingTest {
         projectDescriptor.setName("service");
         projectDescriptor.setModules(modules);
         projectDescriptor
-            .setProjectFolder(Paths.get("./test-resources/ServiceInterfaceMethodInterceptingTest").toAbsolutePath());
+                .setProjectFolder(Paths.get("./test-resources/ServiceInterfaceMethodInterceptingTest").toAbsolutePath());
         module.setProject(projectDescriptor);
         module.setRulesRootPath(new PathEntry("Overload.xls"));
 
@@ -335,9 +333,9 @@ public class ServiceInterfaceMethodInterceptingTest {
         assertNotNull(instantiationFactory);
         instantiationFactory.setRuleServiceLoader(ruleServiceLoader);
 
-        when(ruleServiceLoader.resolveModulesForProject(deploymentDescription.getName(),
-            deploymentDescription.getVersion(),
-            projectDescriptor.getName())).thenReturn(modules);
+        when(ruleServiceLoader.resolveProject(deploymentDescription.getName(),
+                deploymentDescription.getVersion(),
+                projectDescriptor.getName())).thenReturn(projectDescriptor);
         Deployment deployment = mock(Deployment.class);
         List<IProject> projects = new ArrayList<>();
         AProject project = mock(AProject.class);
@@ -347,10 +345,10 @@ public class ServiceInterfaceMethodInterceptingTest {
         when(deployment.getDeploymentName()).thenReturn(deploymentDescription.getName());
         when(deployment.getCommonVersion()).thenReturn(deploymentDescription.getVersion());
         when(ruleServiceLoader.getDeployment(eq(deploymentDescription.getName()),
-            eq(deploymentDescription.getVersion()))).thenReturn(deployment);
+                eq(deploymentDescription.getVersion()))).thenReturn(deployment);
         when(ruleServiceLoader
-            .resolveModulesForProject(deploymentDescription.getName(), deploymentDescription.getVersion(), "service"))
-                .thenReturn(modules);
+                .resolveProject(deploymentDescription.getName(), deploymentDescription.getVersion(), "service"))
+                .thenReturn(projectDescriptor);
     }
 
     @Test
@@ -362,7 +360,7 @@ public class ServiceInterfaceMethodInterceptingTest {
         Calendar calendar = Calendar.getInstance();
         calendar.set(2009, Calendar.JUNE, 15);
         runtimeContext.setCurrentDate(calendar.getTime());
-        Assert.assertEquals(100, instance.driverRiskScoreOverloadTest(runtimeContext, "High Risk Driver"), 0.1);
+        assertEquals(100, instance.driverRiskScoreOverloadTest(runtimeContext, "High Risk Driver"), 0.1);
     }
 
     @Test
@@ -371,7 +369,7 @@ public class ServiceInterfaceMethodInterceptingTest {
         assertTrue(service.getServiceBean() instanceof OverloadInterface);
         OverloadInterface instance = (OverloadInterface) service.getServiceBean();
         IRulesRuntimeContext runtimeContext = RulesRuntimeContextFactory.buildRulesRuntimeContext();
-        Assert.assertEquals("E-D-C-B-A+@Value+@PostConstruct-INPUT_-1-2-3+@Value+@PostConstruct-4-5: convert - @SpreadsheetWrapper : CONVERT", instance.convert(runtimeContext, "INPUT"));
+        assertEquals("E-D-C-B-A+@Value+@PostConstruct-INPUT_-1-2-3+@Value+@PostConstruct-4-5: convert - @SpreadsheetWrapper : CONVERT", instance.convert(runtimeContext, "INPUT"));
     }
 
     @Test
@@ -379,23 +377,23 @@ public class ServiceInterfaceMethodInterceptingTest {
         OpenLService service = instantiationFactory.createService(serviceDescriptionBuilder().build());
         assertTrue(service.getServiceBean() instanceof OverloadInterface);
         OverloadInterface instance = (OverloadInterface) service.getServiceBean();
-        Assert.assertEquals("MyBean_@Value_VirtualModule_null", instance.testSpring());
+        assertEquals("MyBean_@Value_VirtualModule_null", instance.testSpring());
     }
 
     @Test
     public void testResultConverterInterceptor2() throws Exception {
         OpenLService service = instantiationFactory
-            .createService(serviceDescriptionBuilder().setAnnotationTemplateClassName(AOverload.class.getName())
-                .setServiceClassName(null)
-                .build());
+                .createService(serviceDescriptionBuilder().setAnnotationTemplateClassName(AOverload.class.getName())
+                        .setServiceClassName(null)
+                        .build());
         Object serviceBean = service.getServiceBean();
         IRulesRuntimeContext runtimeContext = RulesRuntimeContextFactory.buildRulesRuntimeContext();
         Calendar calendar = Calendar.getInstance();
         calendar.set(2009, Calendar.JUNE, 15);
         runtimeContext.setCurrentDate(calendar.getTime());
         Method method = serviceBean.getClass()
-            .getDeclaredMethod("driverRiskScoreOverloadTest", IRulesRuntimeContext.class, String.class);
-        Assert.assertEquals(100, (Double) method.invoke(serviceBean, runtimeContext, "High Risk Driver"), 0.1);
+                .getDeclaredMethod("driverRiskScoreOverloadTest", IRulesRuntimeContext.class, String.class);
+        assertEquals(100, (Double) method.invoke(serviceBean, runtimeContext, "High Risk Driver"), 0.1);
     }
 
     @Test
@@ -407,7 +405,7 @@ public class ServiceInterfaceMethodInterceptingTest {
         Calendar calendar = Calendar.getInstance();
         calendar.set(2009, Calendar.JUNE, 15);
         runtimeContext.setCurrentDate(calendar.getTime());
-        Assert.assertEquals(12345, instance.nonExistedMethod("High Risk Driver"), 0.1);
+        assertEquals(12345, instance.nonExistedMethod("High Risk Driver"), 0.1);
     }
 
     @Test
@@ -420,7 +418,7 @@ public class ServiceInterfaceMethodInterceptingTest {
         calendar.set(2009, Calendar.JUNE, 15);
         runtimeContext.setCurrentDate(calendar.getTime());
         assertNotNull(instance.loadClassMethod());
-        Assert.assertEquals("org.openl.generated.beans.MyBean", instance.loadClassMethod().getClass().getName());
+        assertEquals("org.openl.generated.beans.MyBean", instance.loadClassMethod().getClass().getName());
     }
 
     @Test
@@ -433,54 +431,54 @@ public class ServiceInterfaceMethodInterceptingTest {
         calendar.set(2009, Calendar.JUNE, 15);
         runtimeContext.setCurrentDate(calendar.getTime());
         Double result = instance.driverRiskScoreNoOverloadTest(runtimeContext, "High Risk Driver");
-        Assert.assertEquals(-1d, result, 0.1d);
+        assertEquals(-1d, result, 0.1d);
     }
 
     @Test
     public void testServiceClassUndecorating() throws Exception {
         ServiceDescription serviceDescription = serviceDescriptionBuilder().build();
         Class<?> interfaceForInstantiationStrategy = RuleServiceInstantiationFactoryHelper
-            .buildInterfaceForInstantiationStrategy(OverloadInterface.class,
-                Thread.currentThread().getContextClassLoader(),
-                null,
-                serviceDescription.isProvideRuntimeContext(),
-                serviceDescription.isProvideVariations());
-        Assert.assertEquals(3, interfaceForInstantiationStrategy.getMethods().length);
-        Assert.assertEquals(String.class, interfaceForInstantiationStrategy.getMethod("convert", IRulesRuntimeContext.class, String.class).getReturnType());
-        Assert.assertEquals(Object.class, interfaceForInstantiationStrategy.getMethod("driverRiskScoreOverloadTest", IRulesRuntimeContext.class, String.class).getReturnType());
-        Assert.assertEquals(Object.class, interfaceForInstantiationStrategy.getMethod("driverRiskScoreNoOverloadTest", IRulesRuntimeContext.class, String.class).getReturnType());
+                .buildInterfaceForInstantiationStrategy(OverloadInterface.class,
+                        Thread.currentThread().getContextClassLoader(),
+                        null,
+                        serviceDescription.isProvideRuntimeContext(),
+                        serviceDescription.isProvideVariations());
+        assertEquals(3, interfaceForInstantiationStrategy.getMethods().length);
+        assertEquals(String.class, interfaceForInstantiationStrategy.getMethod("convert", IRulesRuntimeContext.class, String.class).getReturnType());
+        assertEquals(Object.class, interfaceForInstantiationStrategy.getMethod("driverRiskScoreOverloadTest", IRulesRuntimeContext.class, String.class).getReturnType());
+        assertEquals(Object.class, interfaceForInstantiationStrategy.getMethod("driverRiskScoreNoOverloadTest", IRulesRuntimeContext.class, String.class).getReturnType());
     }
 
     @Test
     public void testMissingInterfaceClasses() {
         try {
             OpenLService service = instantiationFactory
-                .createService(serviceDescriptionBuilder().setServiceClassName(ELUSIVE_CLASS_NAME).build());
+                    .createService(serviceDescriptionBuilder().setServiceClassName(ELUSIVE_CLASS_NAME).build());
             service.getServiceClass();
             fail("Everything went different before...");
         } catch (RuleServiceInstantiationException e) {
             Throwable actual = findExceptionByMessage(e,
-                "Failed to load a service class 'org.openl.test.MustNotBeFoundInClassloader'.");
-            assertNotNull("Exception must be present", actual);
+                    "Failed to load a service class 'org.openl.test.MustNotBeFoundInClassloader'.");
+            assertNotNull(actual, "Exception must be present");
             assertTrue(actual.getCause() instanceof ClassNotFoundException);
         }
         try {
             OpenLService service = instantiationFactory
-                .createService(serviceDescriptionBuilder().setServiceClassName(null)
-                    .setAnnotationTemplateClassName(ELUSIVE_CLASS_NAME)
-                    .build());
+                    .createService(serviceDescriptionBuilder().setServiceClassName(null)
+                            .setAnnotationTemplateClassName(ELUSIVE_CLASS_NAME)
+                            .build());
             service.getServiceClass();
             fail("Everything went different before...");
         } catch (RuleServiceInstantiationException e) {
             Throwable actual = findExceptionByMessage(e,
-                "Failed to load or apply annotation template class 'org.openl.test.MustNotBeFoundInClassloader'.");
-            assertNotNull("Exception must be present", actual);
+                    "Failed to load or apply annotation template class 'org.openl.test.MustNotBeFoundInClassloader'.");
+            assertNotNull(actual, "Exception must be present");
             assertTrue(actual.getCause() instanceof ClassNotFoundException);
         }
 
         try {
             OpenLService service = instantiationFactory.createService(serviceDescriptionBuilder()
-                .setServiceClassName(null)
+                    .setServiceClassName(null)
                     .setRmiServiceClassName(ELUSIVE_CLASS_NAME)
                     .setPublishers(Collections.singletonList("RMI"))
                     .build());
@@ -488,32 +486,32 @@ public class ServiceInterfaceMethodInterceptingTest {
             fail("Everything went different before...");
         } catch (RuleServiceInstantiationException e) {
             Throwable actual = findExceptionByMessage(e,
-                "Failed to load RMI service class 'org.openl.test.MustNotBeFoundInClassloader'.");
-            assertNotNull("Exception must be present", actual);
+                    "Failed to load RMI service class 'org.openl.test.MustNotBeFoundInClassloader'.");
+            assertNotNull(actual, "Exception must be present");
             assertTrue(actual.getCause() instanceof ClassNotFoundException);
         }
 
         try {
             OpenLService service = instantiationFactory
-                .createService(serviceDescriptionBuilder().setServiceClassName(null)
-                    .setAnnotationTemplateClassName(Overload.class.getName())
-                    .build());
+                    .createService(serviceDescriptionBuilder().setServiceClassName(null)
+                            .setAnnotationTemplateClassName(Overload.class.getName())
+                            .build());
             service.getServiceClass();
             fail("Everything went different before...");
         } catch (RuleServiceInstantiationException e) {
             Throwable actual = findExceptionByMessage(e,
-                "Failed to apply annotation template class 'org.openl.rules.ruleservice.core.interceptors.ServiceInterfaceMethodInterceptingTest$Overload'. Interface or abstract class is expected, but class is found.");
-            assertNotNull("Exception must be present", actual);
+                    "Failed to apply annotation template class 'org.openl.rules.ruleservice.core.interceptors.ServiceInterfaceMethodInterceptingTest$Overload'. Interface or abstract class is expected, but class is found.");
+            assertNotNull(actual, "Exception must be present");
         }
         try {
             OpenLService service = instantiationFactory
-                .createService(serviceDescriptionBuilder().setServiceClassName(AOverload.class.getName()).build());
+                    .createService(serviceDescriptionBuilder().setServiceClassName(AOverload.class.getName()).build());
             service.getServiceClass();
             fail("Everything went different before...");
         } catch (RuleServiceInstantiationException e) {
             Throwable actual = findExceptionByMessage(e,
-                "Failed to apply service class 'class org.openl.rules.ruleservice.core.interceptors.ServiceInterfaceMethodInterceptingTest$AOverload'. Interface is expected, but class is found.");
-            assertNotNull("Exception must be present", actual);
+                    "Failed to apply service class 'class org.openl.rules.ruleservice.core.interceptors.ServiceInterfaceMethodInterceptingTest$AOverload'. Interface is expected, but class is found.");
+            assertNotNull(actual, "Exception must be present");
         }
     }
 
