@@ -1,6 +1,9 @@
 package org.openl.rules.ruleservice.publish;
 
-import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Method;
@@ -8,26 +11,23 @@ import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
-import org.junit.Assert;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
 import org.objectweb.asm.Type;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.ApplicationContext;
+import org.springframework.test.context.TestPropertySource;
+import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
+
 import org.openl.rules.context.IRulesRuntimeContext;
 import org.openl.rules.context.RulesRuntimeContextFactory;
 import org.openl.rules.ruleservice.core.OpenLService;
 import org.openl.rules.ruleservice.core.RuleServiceInstantiationException;
 import org.openl.rules.ruleservice.management.ServiceManager;
 import org.openl.rules.ruleservice.simple.RulesFrontend;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.ApplicationContext;
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 
-@RunWith(SpringJUnit4ClassRunner.class)
-@TestPropertySource(properties = { "production-repository.uri=test-resources/DynamicInterfacePublishingTest",
+@TestPropertySource(properties = {"production-repository.uri=test-resources/DynamicInterfacePublishingTest",
         "production-repository.factory = repo-file"})
-@ContextConfiguration({ "classpath:openl-ruleservice-beans.xml" })
+@SpringJUnitConfig(locations = {"classpath:openl-ruleservice-beans.xml"})
 public class DynamicInterfacePublishingTest {
 
     @Autowired
@@ -50,7 +50,7 @@ public class DynamicInterfacePublishingTest {
                 "method1(Lorg/openl/rules/context/IRulesRuntimeContext;Ljava/lang/Object;)Ljava/lang/String;",
                 "method3(Lorg/openl/rules/context/IRulesRuntimeContext;Lorg/openl/ruleservice/dynamicinterface/test/MyClass;)Lorg/openl/ruleservice/dynamicinterface/test/MyClass;",
                 "baseHello(Lorg/openl/rules/context/IRulesRuntimeContext;I)Ljava/lang/String;",
-                "baseHello2(Lorg/openl/rules/context/IRulesRuntimeContext;I)Ljava/lang/String;" };
+                "baseHello2(Lorg/openl/rules/context/IRulesRuntimeContext;I)Ljava/lang/String;"};
         Set<String> methodNames = new HashSet<>();
         Collections.addAll(methodNames, methods);
         int count = 0;
@@ -59,7 +59,7 @@ public class DynamicInterfacePublishingTest {
                 count++;
             }
         }
-        Assert.assertEquals(methods.length, count);
+        assertEquals(methods.length, count);
     }
 
     @Test
@@ -76,7 +76,7 @@ public class DynamicInterfacePublishingTest {
 
         String[] methods = {
                 "method2(Lorg/openl/rules/context/IRulesRuntimeContext;Lorg/openl/generated/beans/MyType;)Lorg/openl/generated/beans/MyType;",
-                "method2(Lorg/openl/rules/context/IRulesRuntimeContext;Lorg/openl/ruleservice/dynamicinterface/test/MyClass;)Lorg/openl/ruleservice/dynamicinterface/test/MyClass;" };
+                "method2(Lorg/openl/rules/context/IRulesRuntimeContext;Lorg/openl/ruleservice/dynamicinterface/test/MyClass;)Lorg/openl/ruleservice/dynamicinterface/test/MyClass;"};
         Set<String> methodNames = new HashSet<>();
         Collections.addAll(methodNames, methods);
         int count = 0;
@@ -85,7 +85,7 @@ public class DynamicInterfacePublishingTest {
                 count++;
             }
         }
-        Assert.assertEquals(methods.length, count);
+        assertEquals(methods.length, count);
     }
 
     @Test
@@ -105,27 +105,27 @@ public class DynamicInterfacePublishingTest {
 
         IRulesRuntimeContext context = RulesRuntimeContextFactory.buildRulesRuntimeContext();
         Class<?> myClassClass = service.getServiceClass()
-            .getClassLoader()
-            .loadClass("org.openl.ruleservice.dynamicinterface.test.MyClass");
-        Object myClassInstance = myClassClass.newInstance();
+                .getClassLoader()
+                .loadClass("org.openl.ruleservice.dynamicinterface.test.MyClass");
+        Object myClassInstance = myClassClass.getDeclaredConstructor().newInstance();
         Method setNameMethod = myClassClass.getMethod("setName", String.class);
         final String someValue = "someValue";
         setNameMethod.invoke(myClassInstance, someValue);
         Object result = frontend
-            .execute("dynamic-interface-test3", "method2", context, myClassInstance);
-        Assert.assertTrue(myClassClass.isInstance(result));
+                .execute("dynamic-interface-test3", "method2", context, myClassInstance);
+        assertTrue(myClassClass.isInstance(result));
         Method getNameMethod = myClassClass.getMethod("getName");
         Object name = getNameMethod.invoke(result);
-        Assert.assertEquals(someValue, name);
+        assertEquals(someValue, name);
         Class<?> myTypeClass = service.getServiceClass().getClassLoader().loadClass("org.openl.generated.beans.MyType");
-        Object myTypeInstance = myTypeClass.newInstance();
+        Object myTypeInstance = myTypeClass.getDeclaredConstructor().newInstance();
         result = frontend.execute("dynamic-interface-test3", "method2", context, myTypeInstance);
-        Assert.assertNull(result);
+        assertNull(result);
         frontend.execute("dynamic-interface-test3", "method3", context, myClassInstance);
         Object value = getNameMethod.invoke(myClassInstance);
-        Assert.assertEquals("beforeAdviceWasInvoked", value);
+        assertEquals("beforeAdviceWasInvoked", value);
 
         result = frontend.execute("dynamic-interface-test3", "helloWorld");
-        Assert.assertEquals("Hello world ServiceExtraMethodHandler!", result);
+        assertEquals("Hello world ServiceExtraMethodHandler!", result);
     }
 }
